fix contrast errors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ h1, h2, h3, h4 {
 
 .navbar-nav a {
     color: #fff;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     margin-top: 40px;
     margin-right: 50px;
 }
